Fixing problem in Keeping Clean configuration file

--- a/Examples/RoboMAX/Keeping Clean/configuration/configuration.json
+++ b/Examples/RoboMAX/Keeping Clean/configuration/configuration.json
@@ -84,6 +84,15 @@
                     "hddl_var": "?rm"
                 }
             ]
+        },
+        {
+            "task_id": "AT8",
+            "map": [
+                {
+                    "gm_var": "current_room",
+                    "hddl_var": "?rm"
+                }
+            ]
         }
     ],
 
